syntax = "proto3";

package yandex.cloud.endpoint;

option go_package = "github.com/yandex-cloud/go-genproto/yandex/cloud/endpoint;endpoint";
option java_package = "yandex.cloud.api.endpoint";

message ApiEndpoint {
    string id = 1;
    string address = 2;
}
